fixed search
